download links added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="#about">About</a>
               </li>
               <li>
-                <a href="#download">Download</a>
+                <a href="https://github.com/firemansamm/internet-exploder/releases">Download</a>
               </li>
             </ul>
             <ul class="nav pull-right">
@@ -40,18 +40,18 @@
                 <blink>Exploder</blink>
               </h1>
               <p class="lead">The browser you never knew you needed</p>
-              <a class="btn btn-primary btn-large">Download Now</a>
+              <a class="btn btn-primary btn-large" href="https://github.com/firemansamm/internet-exploder/releases">Download</a>
             </div>
             <div class="span3" id="icons">
               <img src="https://www.w3.org/Icons/valid-html20" />
               <img src="https://www.w3.org/Icons/valid-css" />
-              <img src="http://code.divshot.com/geo-bootstrap/img/test/notepad.gif" />
-              <img src="http://code.divshot.com/geo-bootstrap/img/test/ie_logo.gif" />
+              <img src="https://code.divshot.com/geo-bootstrap/img/test/notepad.gif" />
+              <img src="https://code.divshot.com/geo-bootstrap/img/test/ie_logo.gif" />
               <img src="https://web.archive.org/web/20090821221856im_/http://geocities.com/TheTropics/Beach/3633/assets/images/netscape.gif" />
             </div>
           </div>
           <div class="alert alert-block" style="margin-top:20px">
-            <img class="pull-left" src="http://code.divshot.com/geo-bootstrap/img/test/drudgesiren.gif" width="60" style="margin-top:-10px"/>
+            <img class="pull-left" src="https://code.divshot.com/geo-bootstrap/img/test/drudgesiren.gif" width="60" style="margin-top:-10px"/>
             <h4 class="alert-heading">
               Incompatible Browser!
             </h4>
@@ -71,20 +71,20 @@
           </div>
           <div class="row" style="margin-top: 20px">
             <div class="span3">
-              <img src="http://code.divshot.com/geo-bootstrap/img/test/counter2.gif" style="height:100px;" />
+              <img src="https://code.divshot.com/geo-bootstrap/img/test/counter2.gif" style="height:100px;" />
             </div>
             <div class="span3">
-              <img src="http://code.divshot.com/geo-bootstrap/img/test/yahooweek.gif" />
+              <img src="https://code.divshot.com/geo-bootstrap/img/test/yahooweek.gif" />
             </div>
             <div class="span2">
-              <a href="http://web.archive.org/web/19961224024938/http://americanexpress.com/">
-                <img src="https://web.archive.org/web/19970321011955/http://www4.geocities.com:80/pictures/sponsor/amex_trip.gif" />
+              <a href="https://web.archive.org/web/19961224024938/http://americanexpress.com/">
+                <img src="https://web.archive.org/web/19970321011955if_/http://www4.geocities.com:80/pictures/sponsor/amex_trip.gif" />
               </a>
             </div>
             <div class="span4">
-              <a href="http://web.archive.org/web/19961224024938/http://americanexpress.com/">
-                <img src="https://web.archive.org/web/20090831165418/http://geocities.com/garlapati/americanexpress1.gif" />
-                <img src="https://web.archive.org/web/20090831165418/http://geocities.com/garlapati/americanexpress.gif" />
+              <a href="https://web.archive.org/web/19961224024938/http://americanexpress.com/">
+                <img src="https://web.archive.org/web/20090831165418if_/http://geocities.com/garlapati/americanexpress1.gif" />
+                <img src="https://web.archive.org/web/20090831165418if_/http://geocities.com/garlapati/americanexpress.gif" />
               </a>
             </div>
           </div>
